--- a/backend/mindflix_rag.ipynb
+++ b/backend/mindflix_rag.ipynb
@@ -812,7 +812,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "myapp",
       "language": "python",
       "name": "python3"
     },
@@ -826,7 +826,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.11.5"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
